--- a/lib/dialog/dialog.scss
+++ b/lib/dialog/dialog.scss
@@ -1,6 +1,6 @@
 
 .fake-modal-root {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   height: 100%;
@@ -32,4 +32,7 @@
       text-align: right;
     }
   }
+}
+.fake-modal-root.show {
+  display: flex;
 } 
