--- a/lib/dialog/dialog.scss
+++ b/lib/dialog/dialog.scss
@@ -1,38 +1,65 @@
 
 .fake-modal-root {
-  display: none;
-  justify-content: center;
-  align-items: center;
+  position: fixed;
+  visibility: hidden;
   height: 100%;
+  top: 0;
+  left: 0;
   & > .fake-modal-mask {
     position: fixed;
+    z-index: -1;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     height: 100%;
-    background-color: rgba(0,0,0,.45);
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 1;
+    transition: opacity 3s cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   }
-  
-  & > .fake-modal-content {
-    font-size: 14px;
-    position: fixed;
-    width: 520px;
-    background-color: rgb(255, 255, 255);
-    & > .fake-modal-header {
-      padding: 16px 24px;
-      font-weight: 500;
-      font-size: 16px;
-    }
-    & > .fake-modal-body {
-      padding: 24px;
-    }
-    & > .fake-modal-footer {
-      padding: 10px 16px;
-      text-align: right;
+  & > .fake-modal-container {
+    display: flex;
+    height: 100%;
+    width: 100vw;
+    align-items: center;
+    justify-content: center;
+    opacity: 1;
+    transition: opacity 3s cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+
+    & > .fake-modal-content {
+      border-radius: 4px;
+      margin: 32px;
+      width: 520px;
+      background-color: rgb(255, 255, 255);
+      box-shadow: 0px 11px 15px -7px rgba(0,0,0,0.2), 0px 24px 38px 3px rgba(0,0,0,0.14), 0px 9px 46px 8px rgba(0,0,0,0.12);
+      & > .fake-modal-header {
+        padding: 16px 24px;
+        & > h2 {
+          font-weight: 500;
+          color: rgba(0, 0, 0, 0.87);
+          line-height: 1.6;
+          font-size: 1.25rem;
+          font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+          font-weight: 500;
+        }
+      }
+      & > .fake-modal-body {
+        padding: 8px 24px;
+        & > p {
+          color: rgba(0, 0, 0, 0.54);
+          margin-bottom: 12px;
+          font-size: 1rem;
+          font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+          line-height: 1.5;
+        }
+      }
+      & > .fake-modal-footer {
+        padding: 10px 16px;
+        text-align: right;
+      }
     }
   }
 }
 .fake-modal-root.show {
-  display: flex;
+  visibility: visible;
 } 
