--- a/lib/dialog/dialog.scss
+++ b/lib/dialog/dialog.scss
@@ -1,5 +1,5 @@
 
-.fake-modal-root {
+.fake-modal {
   position: fixed;
   visibility: hidden;
   height: 100%;
@@ -27,7 +27,6 @@
     transition: opacity 3s cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 
     & > .fake-modal-content {
-      border-radius: 4px;
       margin: 32px;
       width: 520px;
       background-color: rgb(255, 255, 255);
@@ -60,6 +59,6 @@
     }
   }
 }
-.fake-modal-root.show {
+.fake-modal.show {
   visibility: visible;
 } 
