--- a/lib/icon/icon.scss
+++ b/lib/icon/icon.scss
@@ -1,7 +1,7 @@
 .xui-icon {
   width: 1em;
   height: 1em;
-  font-size: 1.25rem;
+  font-size: 1.25em;
   display: inline-block;
   fill: currentColor;
   &.color-primary {
