--- a/lib/dialog/dialog.scss
+++ b/lib/dialog/dialog.scss
@@ -7,7 +7,7 @@
   left: 0;
   &-mask {
     position: fixed;
-    z-index: -1;
+    z-index: 10;
     top: 0;
     right: 0;
     bottom: 0;
@@ -27,6 +27,8 @@
     transition: opacity 3s cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 
     & .fake-modal-content {
+      position: absolute;
+      z-index: 999;
       margin: 32px;
       width: 520px;
       background-color: rgb(255, 255, 255);
@@ -44,6 +46,7 @@
         }
         & .fake-modal-close {
           position: absolute;
+          display: flex;
           cursor: pointer;
           width: 16px;
           height: 16px;
@@ -51,8 +54,8 @@
           top: 8px;
           border-radius: 50%;
           color: #999999;
-          text-align: center;
-          vertical-align: middle;
+          align-items: center;
+          justify-content: center;
         }
         & .fake-modal-close:hover {
           background: rgb(246, 246, 246);
