--- a/lib/base.scss
+++ b/lib/base.scss
@@ -13,3 +13,9 @@ body {
 .fake-radius {
   border-radius: 4px;
 }
+
+$rose-color: #e91e63;
+$primary-color: #1976d2;
+$info-color: #00acc1;
+$green-color: #4caf50;
+$purple-color: #9c27b0;
