--- a/lib/button/button.scss
+++ b/lib/button/button.scss
@@ -1,3 +1,6 @@
+
+@import '../base.scss';
+
 .fake-button {
   display: inline-flex;
   justify-content: center;
@@ -10,51 +13,89 @@
   font-size: 1em;
   line-height: 1.5;
   color: rgba(0, 0, 0);
-  box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14), 0px 1px 5px 0px rgba(0,0,0,0.12);
-  background-color: #e0e0e0;
+  // background-color: #e0e0e0;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 
-  &:hover {
+  &.fake-contained {
+    box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14), 0px 1px 5px 0px rgba(0,0,0,0.12);
+  }
+  &.fake-contained:hover {
     box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
     background-color: #d5d5d5;
   }
-  &:active {
+  &.fake-contained:active {
     box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,0,0.14), 0px 3px 14px 2px rgba(0,0,0,0.12);
   }
-  &.primary {
+  &.fake-contained-primary {
     color: #fff;
-    background-color: #1976d2;
+    background-color: $primary-color;
   }
-  &.primary:hover {
+  &.fake-contained-primary:hover {
     background-color: rgb(17, 82, 147);
   }
-  &.info {
+  &.fake-contained-info {
     color: #fff;
-    background-color: #00acc1;
+    background-color: $info-color;
   }
-  &.info:hover {
+  &.fake-contained-info:hover {
     background-color: #048e9e;
   }
-  &.green {
+  &.fake-contained-green {
     color: #fff;
-    background-color: #4caf50;
+    background-color: $green-color;
   }
-  &.green:hover {
+  &.fake-contained-green:hover {
     background-color: #388e3c;
   }
-  &.rose {
+  &.fake-contained-rose {
     color: #fff;
-    background-color: #e91e63;
+    background-color: $rose-color;
   }
-  &.rose:hover {
+  &.fake-contained-rose:hover {
     background-color: #c52259;
   }
-  &.purple {
+  &.fake-contained-purple {
     color: #fff;
-    background-color: #9c27b0;
+    background-color: $purple-color;
   }
-  &.purple:hover {
-    background-color: #7b1fa2;;
+  &.fake-contained-purple:hover {
+    background-color: #7b1fa2;
   }
+}
 
+.fake-text {
+  background: none;
+}
+.fake-text:hover {
+  background-color: rgba(0,0,0,.04);
+}
+.fake-text-primary {
+  color: $primary-color;
+}
+.fake-text-primary:hover {
+  background-color: rgba(25, 118, 210, 0.09);
+}
+.fake-text-info {
+  color: $info-color;
+}
+.fake-text-info:hover {
+  background-color: #00acc10f;
+}
+.fake-text-green {
+  color: $green-color;
+}
+.fake-text-green:hover {
+  background-color:#4caf5014;
+}
+.fake-text-rose {
+  color: $rose-color;
+}
+.fake-text-rose:hover {
+  background-color:#e91e630f;
+}
+.fake-text-purple {
+  color: $purple-color;
+}
+.fake-text-purple:hover {
+  background-color: #9c27b017;
 }
