--- a/lib/layout/layout.example.scss
+++ b/lib/layout/layout.example.scss
@@ -1,20 +1,15 @@
+@import '../base.scss';
 .x {
   height: 40px;
-  background: #4285f4;
-  margin: 4px 0;
+  background: $primary-color;
   color: white;
 }
 .y {
-  background: lighten(#4285f4, 5%);
-  margin: 4px 0;
+  background: lighten($primary-color, 5%);
   color: white;
 }
 .z {
-  background: #34a853;
+  background: lighten($primary-color,10%);
   width: 100px;
-  margin: 4px 0;
   color: white;
-}
-.z + .y, .y + .z, .z + .gu-layout {
-  margin-left: 8px;
 }
