--- a/lib/button/button.scss
+++ b/lib/button/button.scss
@@ -11,11 +11,23 @@
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   cursor: pointer;
   padding: 6px 16px;
-  font-size: 1em;
+  font-size: 14px;
   line-height: 1.5;
   color: rgba(0, 0, 0);
   transition: background-color 400ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 400ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border 400ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   overflow: hidden;
+  &.fake-button-small {
+    font-size: 13px;
+    padding: 3px 9px;
+  }
+  &.fake-button-default {
+    padding: 6px 16px;
+    font-size: 14px;
+  }
+  &.fake-button-large {
+    font-size: 15px;
+    padding: 7px 21px;
+  }
 
   &.fake-contained {
     box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2), 0px 2px 2px 0px rgba(0,0,0,0.14), 0px 1px 5px 0px rgba(0,0,0,0.12);
