--- a/lib/input/input.scss
+++ b/lib/input/input.scss
@@ -1,1 +1,78 @@
 @import '../base.scss';
+
+.fake-input-root {
+  // border: 1px solid red;
+  color: rgba(0, 0, 0, 0.87);
+  // width: 300px;
+  cursor: text;
+  display: inline-flex;
+  position: relative;
+  .fake-input-label {
+    top: 0;
+    left: 0;
+    position: absolute;
+    transform: translate(0, 24px) scale(1);
+    transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
+    // transform: translate(0, 1.5px) scale(0.75);
+    color: rgba(0, 0, 0, 0.54);
+    padding: 0;
+    font-size: 1rem;
+  }
+  &.fake-input-standard .fake-input-label {
+    
+  }
+  &.fake-input-outlined .fake-input-label {
+    transform: translate(16px, 18px) scale(1);
+  }
+
+ 
+  .fake-input-wrapper {
+    color: rgba(0, 0, 0, 0.87);
+    cursor: text;
+    display: inline-flex;
+    font-size: 1rem;
+    align-items: center;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 400;
+
+    .fake-input {
+      font: inherit;
+      color: currentColor;
+      width: 100%;
+      border: 0;
+      margin: 0;
+      display: block;
+      padding: 6px 0 7px;
+      background: none;
+      box-sizing: content-box;
+    }
+    .fake-input:focus {
+      outline: 0;
+    }
+    // .fake-input:focus
+  }
+
+  &.fake-input-standard .fake-input-wrapper{
+    margin-top: 13px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.42);
+
+  }
+  &.fake-input-standard .fake-input-wrapper:hover{
+    border-bottom: 2px solid rgba(0, 0, 0, 0.82);
+  }
+  
+  &.fake-input-outlined .fake-input-wrapper{
+    border: 1px solid rgba(0, 0, 0, 0.42);
+    border-radius: 4px;
+    & .fake-input {
+      padding: 18.5px 14px;
+    }
+  }
+  &.fake-input-outlined .fake-input-wrapper:hover {
+    border: 1px solid rgba(0, 0, 0, 0.82);
+  }
+  &.fake-input-outlined .fake-input-wrapper:focus {
+    border: 1px solid red;
+  }
+
+}
