--- a/lib/collapse/collapse.scss
+++ b/lib/collapse/collapse.scss
@@ -1,4 +1,5 @@
 .fake-collapse {
+  transition: all .3s cubic-bezier(.78,.14,.15,.86);
   border-top: 1px solid #d9d9d9;
   border-left: 1px solid #d9d9d9;
   border-right: 1px solid #d9d9d9;
@@ -7,20 +8,19 @@
     >.fake-collapse-header {
       position: relative;
       padding: 12px 16px 12px 16px;
-      // padding: 12px 16px 12px 40px;
       color: rgba(0,0,0,.85);
       line-height: 1.5715;
       cursor: pointer;
-      -webkit-transition: all .3s;
       transition: all .3s;
       background-color: rgb(250, 250, 250);
     }
     >.fake-collapse-content {
       padding: 16px;
-      color: rgba(0,0,0,.85);
+      color: rgba(0, 0, 0, .85);
       background-color: #fff;
       border-top: 1px solid #d9d9d9;
-      display: block;
+      display: none;
+      transition-duration: 200ms;
     }
     >.fake-collapse-content.fake-collapse-content-active {
       display: block;
