--- a/lib/collapse/collapse.scss
+++ b/lib/collapse/collapse.scss
@@ -1,13 +1,23 @@
 .fake-collapse {
-  transition: all .3s cubic-bezier(.78,.14,.15,.86);
   border-top: 1px solid #d9d9d9;
   border-left: 1px solid #d9d9d9;
   border-right: 1px solid #d9d9d9;
   .fake-collapse-item {
     border-bottom: 1px solid #d9d9d9;
     >.fake-collapse-header {
+      span {
+        vertical-align: middle;
+        svg {
+          transform: rotate(0deg);
+          // transition: .2s all;
+        }
+        &.fake-collapse-icon-active svg {
+          // animation: .3s slidein;
+          transform: rotate(90deg);
+        }
+      }
       position: relative;
-      padding: 12px 16px 12px 16px;
+      padding: 10px 16px 10px 16px;
       color: rgba(0,0,0,.85);
       line-height: 1.5715;
       cursor: pointer;
@@ -19,11 +29,17 @@
       color: rgba(0, 0, 0, .85);
       background-color: #fff;
       border-top: 1px solid #d9d9d9;
-      transition-duration: 200ms;
       display: none;
+      height: 0;
+      transition: 12s all;
     }
     >.fake-collapse-content.fake-collapse-content-active {
       display: block;
+      height: 100%;
     }
+  }
+  @keyframes slidein {
+    from { transform: rotate(0deg); }
+    to   { transform: rotate(90deg); }
   }
 }
