--- a/lib/tree/style.scss
+++ b/lib/tree/style.scss
@@ -3,8 +3,7 @@
     outline: 1px solid;
     line-height: 1.5;
   }
-  &-level-1 {
-  }
+
   &-level-2 {
     padding-left: 1em;
   }
@@ -16,11 +15,14 @@
   }
  
   &-text {
+    &.selected {
+      background-color: #4b91d3;
+    }
     display: flex;
     height: 40px;
     line-height: 40px;
+    cursor: pointer;
     .arrow {
-      cursor: pointer;
       display: flex;
       justify-content: center; 
       align-items: center;
@@ -37,25 +39,30 @@
       flex-grow: 1;
       user-select: none;
       padding-right: 5px;
+      display: flex;
+      justify-content: space-between;
       .btn {
-        float: right;
+        display: flex;
+        align-items: center;
+        position: relative;
         cursor: pointer;
         .button-add {
+          position: absolute;
+          left: -40px;
+        }
+        .button-delete {
+          position: absolute;
+          left: -20px;
         }
       }
     }
     &:hover {
-      .content {
-        background: #f6f7fb;
-      }
+      background: #f6f7fb;
     }
   }
 
   &-children{
     overflow: hidden;
     transition: height 200ms;
-    &-gone {
-      height: 0;
-    }
   }
 }
